--- a/front.css
+++ b/front.css
@@ -142,7 +142,8 @@ list-style: none;
     display: flex;
     justify-content: space-between;
     background-color: black;
-    padding: 30px 30px 30px 30px;
+    padding: 20px 20px 20px 20px;
+    border-bottom: 10px;
 }
     ul{
         padding-left: 450px;
